Command added to copy generated Markdown into the project directory when generated.

--- a/dist.ini
+++ b/dist.ini
@@ -7,6 +7,12 @@ copyright_year   = 2014
 version = 0.001
 
 [@Basic]
+
 [ReadmeFromPod]
+
 [ReadmeMarkdownFromPod]
+
+[CopyFilesFromBuild]
+copy = README.mkdn
+
 [AutoPrereqs]
